--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -14,6 +14,25 @@ h1 {
   text-align: center;
   color: #4e5655;
 }
+.btn-primary {
+  background-color: #FFF;
+  border-color: #4e5655;
+  color: #4e5655;
+}
+
+.btn-primary:hover {
+  cursor: pointer;
+  color: #FFFFFF!important;
+}
+
+
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    max-width: 600px;
+    margin: 30px auto;
+  }
+}
 
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
