--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -21,8 +21,17 @@ h1 {
 }
 
 .btn-primary:hover {
-  cursor: pointer;
   color: #FFFFFF!important;
+}
+
+.btn-danger {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.btn:hover {
+  cursor: pointer;
 }
 
 
