--- a/webapp/src/app/service-detail/service-detail.component.html
+++ b/webapp/src/app/service-detail/service-detail.component.html
@@ -247,39 +247,41 @@
     <i *ngIf="loading" class="fa fa-refresh fa-spin fa-3x fa-fw"></i>
     <span *ngIf="loading" class="sr-only">Loading...</span>
     <div *ngIf="!loading">
-      <div class="right-buttons">
-        <ul class="list-inline">
-          <li class="list-inline-item"><button [disabled]="loading" class="btn btn-primary" (click)="refresh()"><i class="fa fa-refresh" aria-hidden="true"></i> Refresh</button></li>
-        </ul>
+      <div *ngFor="let container of service['taskDefinition']['containerDefinitions']">
+        <h3>{{container.name}}</h3>
+        <table class="table center-table" *ngIf="runTaskInput[container.name].enabled">
+          <thead class="thead-default">
+            <tr>
+              <th class="w-25">Name</th>
+              <th class="w-75">Property</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Configuration</td>
+              <td>
+                <div class="row">
+                  <label class="checkbox-label">
+                    <input type="checkbox" [(ngModel)]="runTaskInput[container.name].enabled" value="true"/>&nbsp;Enabled
+                  </label>
+                </div>
+                <div class="row">
+                  <label class="checkbox-label">
+                    <input type="checkbox" [(ngModel)]="runTaskInput[container.name].environmentVariables" value="true" checked="true"/>&nbsp;Load environment variables
+                  </label>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Command</td>
+              <td><input type="text" class="form-control" name="containerCommand" [(ngModel)]="runTaskInput.containerCommand" /></td>
+            </tr>
+          <tbody>
+        </table>
+        <label class="checkbox-label" *ngIf="!runTaskInput[container.name].enabled">
+          <input type="checkbox" [(ngModel)]="runTaskInput[container.name].enabled" value="true"/>&nbsp;Enabled <br />
+        </label>
       </div>
-      <table class="table center-table">
-        <thead class="thead-default">
-          <tr>
-            <th class="w-25"><strong>Manual Scaling</strong></th>
-            <th class="w-25">Running Count</th>
-            <th class="w-25">Desired Count</th>
-            <th class="w-25">&nbsp;</th>
-          </tr>
-        </thead>
-        <tbody>
-            <td>{{service["serviceName"]}}</td>
-            <td>{{service["runningCount"]}} ({{service["pendingCount"]}} pending)</td>
-            <td *ngIf="editManualScaling">
-              <div class="row align-middle">
-                <div class="col-6">
-                  <input type="text" class="form-control" name="desiredCount" [(ngModel)]="scalingInput.desiredCount" />
-                </div>
-                <div class="col-2">
-                  <button [disabled]="saving" class="btn btn-primary" (click)="saveDesiredCount()"><i class="fa fa-file-text-o" aria-hidden="true"></i>&nbsp;&nbsp;Save</button>
-                  <i *ngIf="saving" class="fa fa-spinner" aria-hidden="true"></i>
-                </div>
-              </div>
-            </td>
-            <td *ngIf="!editManualScaling">
-              {{service["desiredCount"]}}&nbsp;<button class="btn" (click)="editDesiredCount()"><i class="fa fa-pencil align-baseline" aria-hidden="true"></i></button>
-            </td>
-        <tbody>
-      </table>
     </div>
   </div>
 </div>
