--- a/webapp/src/app/service-detail/service-detail.component.html
+++ b/webapp/src/app/service-detail/service-detail.component.html
@@ -201,7 +201,7 @@
           </td>
           <td *ngIf="selectedParameter != parameter">
             {{parameters.map[parameter]["value"]}}&nbsp;<button class="btn" (click)="editParameter(parameter)"><i class="fa fa-pencil align-baseline" aria-hidden="true"></i></button>
-            <button class="btn float-right" (click)="confirmChild.open('deleteParameter', service.serviceName, parameter)"><i class="fa fa-trash" aria-hidden="true"></i></button>
+            <button class="btn float-right" (click)="confirmChild.open('deleteParameter', 'parameter', service.serviceName, parameter)"><i class="fa fa-trash" aria-hidden="true"></i></button>
           </td>
         </tr>
       </table>
@@ -211,10 +211,16 @@
     <i *ngIf="loading" class="fa fa-refresh fa-spin fa-3x fa-fw"></i>
     <span *ngIf="loading" class="sr-only">Loading...</span>
     <div *ngIf="!loading">
-      <div class="right-buttons">
-        <ul class="list-inline">
-          <li class="list-inline-item"><button [disabled]="loading" class="btn btn-primary" (click)="refresh()"><i class="fa fa-refresh" aria-hidden="true"></i> Refresh</button></li>
-        </ul>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Manual Scaling</h2>
+        </div>
+        <div class="col-md-8 right-buttons">
+          <ul class="list-inline">
+            <li class="list-inline-item" *ngIf="scalingInput.autoscaling"><button [disabled]="loading" class="btn btn-primary" (click)="confirmChild.open('disableAutoscaling', 'autoscaling', service.serviceName, 'for '+service.serviceName)"><i class="fa fa-unlink" aria-hidden="true"></i> Disable Auto Scaling</button></li>
+            <li class="list-inline-item"><button [disabled]="loading" class="btn btn-primary" (click)="refresh()"><i class="fa fa-refresh" aria-hidden="true"></i> Refresh</button></li>
+          </ul>
+        </div>
       </div>
       <table class="table center-table">
         <thead class="thead-default">
@@ -244,6 +250,176 @@
             </td>
         <tbody>
       </table>
+      <h2>Auto Scaling</h2>
+      <div class="row" *ngIf="!scalingInput.autoscaling">
+        <div class="col-6">
+          <button [disabled]="saving" class="btn btn-primary" (click)="enableAutoscaling()"><i class="fa fa-balance-scale" aria-hidden="true"></i>&nbsp;&nbsp;Enable Auto Scaling</button>
+        </div>
+      </div>
+      <div *ngIf="scalingInput.autoscaling">
+        <table class="table center-table">
+          <tbody>
+            <tr>
+              <td class="w-25">Minimum number of tasks</td>
+              <td>
+                <div class="row">
+                  <div class="col-6">
+                    <input type="text" class="form-control" name="minimumCount" [(ngModel)]="scalingInput.minimumCount" />
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Desired number of tasks</td>
+              <td>
+                <div class="row">
+                  <div class="col-6">
+                    <input type="text" class="form-control" name="desiredCount" [(ngModel)]="scalingInput.desiredCount" />
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Maximum number of tasks</td>
+              <td>
+                <div class="row">
+                  <div class="col-6">
+                    <input type="text" class="form-control" name="maximumCount" [(ngModel)]="scalingInput.maximumCount" />
+                  </div>
+                </div>
+              </td>
+            </tr>
+              <td>&nbsp;</td>
+              <td>
+                <button [disabled]="saving" class="btn btn-primary" (click)="saveAutoscalingPolicy()"><i class="fa fa-file-text-o" aria-hidden="true"></i>&nbsp;&nbsp;Save</button>
+              </td>
+            <tr>
+            </tr>
+          </tbody>
+        </table>
+        <h2>Auto Scaling Policies</h2>
+        <table class="table center-table" *ngIf="scalingInput.policyCount &gt; 0">
+          <thead class="thead-default">
+            <tr>
+              <th>Name</th>
+              <th>Policy</th>
+              <th>Action</th>
+              <th>&nbsp;</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let policy of scalingInput.policies">
+              <td>{{policy.policyName}}</td>
+              <td>{{policy.metric}} {{policy.comparisonOperator}} {{policy.threshold}}% for {{policy.evaluationPeriods}} times in {{policy.period/60}} minute(s) ({{policy.thresholdStatistic}})</td>
+              <td>{{policy.scalingAdjustment}}</td>
+              <td class="button">
+                <button class="btn btn-middle" (click)="confirmChild.open('deleteAutoscalingPolicy', 'autoscaling policy', service.serviceName, policy.policyName)"><i class="fa fa-trash" aria-hidden="true"></i></button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div *ngIf="!scalingInput.newAutoscalingPolicy">
+          <div class="row">
+            <div class="col-6">
+              <button [disabled]="saving" class="btn btn-primary" (click)="newAutoscalingPolicy()"><i class="fa fa-balance-scale" aria-hidden="true"></i>&nbsp;&nbsp;New Scaling policy</button>
+            </div>
+          </div>
+        </div>
+        <div *ngIf="scalingInput.newAutoscalingPolicy">
+          <h3>New Auto Scaling policy</h3>
+          <table class="table center-table">
+            <tbody>
+              <tr>
+                <td class="w-25">Metric</td>
+                <td>
+                  <div class="row">
+                    <div class="col-8">
+                      <select class="form-control" [(ngModel)]="scalingInputPolicy.metric">
+                        <option value="cpu">CPU in use (percentage)</option>
+                        <option value="memory">Memory in use (percentage)</option>
+                      </select>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>Threshold</td>
+                <td>
+                  <div class="row">
+                    <div class="col-4">
+                      <select class="form-control" [(ngModel)]="scalingInputPolicy.thresholdStatistic">
+                        <option value="average">Average</option>
+                        <option value="minimum">Minimum</option>
+                        <option value="maximum">Maximum</option>
+                        <option value="sum">Sum</option>
+                        <option value="sampleCount">Data samples</option>
+                      </select>
+                    </div>
+                    <div class="col-2">
+                      <select class="form-control" [(ngModel)]="scalingInputPolicy.comparisonOperator">
+                        <option value="greaterThanOrEqualToThreshold">&gt;=</option>
+                        <option value="lessThanOrEqualToThreshold">&lt;=</option>
+                        <option value="greaterThanThreshold">&gt;</option>
+                        <option value="lessThanThreshold">&lt;</option>
+                      </select>
+                    </div>
+                    <div class="col-2">
+                      <input type="text" class="form-control" name="threshold" [(ngModel)]="scalingInputPolicy.threshold" />
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>Threshold period</td>
+                <td>
+                  <div class="row">
+                    <div class="col-1">
+                      <span class="middle">for</span>
+                    </div>
+                    <div class="col-2">
+                      <input type="text" class="form-control" name="datapointsToAlarm" [(ngModel)]="scalingInputPolicy.datapointsToAlarm" />
+                    </div>
+                    <div class="col-2">
+                      <span class="middle">periods of</span>
+                    </div>
+                    <div class="col-3">
+                      <select class="form-control" [(ngModel)]="scalingInputPolicy.period">
+                        <option value="60">1 minute</option>
+                        <option value="300">5 minutes</option>
+                        <option value="900">15 minutes</option>
+                        <option value="1800">30 minutes</option>
+                        <option value="3600">60 minutes</option>
+                      </select>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>Scaling adjustment</td>
+                <td>
+                  <div class="row">
+                    <div class="col-2">
+                      <select class="form-control" [(ngModel)]="scalingInputPolicy.scalingAdjustment">
+                        <option value="1">Up (+1)</option>
+                        <option value="2">Up (+2)</option>
+                        <option value="3">Up (+3)</option>
+                        <option value="-1">Down (-1)</option>
+                        <option value="-2">Down (-2)</option>
+                        <option value="-3">Down (-3)</option>
+                      </select>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="row">
+            <div class="col-6">
+              <button [disabled]="saving" class="btn btn-primary" (click)="addAutoscalingPolicy()"><i class="fa fa-balance-scale" aria-hidden="true"></i>&nbsp;&nbsp;Add policy</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="offset-md-2 col-md-8 cluster-info" *ngIf="tab == 'runTask'">
@@ -380,6 +556,6 @@
     </div>
   </div>
 </div>
-<app-service-detail-confirm (deletedParameter)="deletedParameter($event)" (deletingParameter)="deletingParameter($event)"></app-service-detail-confirm>
+<app-service-detail-confirm (deletedItem)="deletedItem($event)" (deletingItem)="deletingItem($event)"></app-service-detail-confirm>
 <app-service-detail-inspect></app-service-detail-inspect>
 <app-service-detail-deploy (deployed)="deployed($event)" (deploying)="deploying($event)"></app-service-detail-deploy>
