--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -50,3 +50,31 @@ h1 {
 ngb-modal-backdrop {
   z-index: 1050 !important;
 }
+
+/* fix bootstrap 4 -> 5 form groups */
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.form-inline .form-control {
+  display: inline-block;
+  width: auto;
+  vertical-align: middle;
+}
+
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -5px;
+  margin-left: -5px;
+}
+
+.form-row > .col {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+label {
+  margin-bottom: 0.5rem;
+}
