bootstrap 5, UI updates

--- a/webapp/src/app/app-navbar/app-navbar.component.html
+++ b/webapp/src/app/app-navbar/app-navbar.component.html
@@ -5,10 +5,10 @@
   </button>
    <ul class="navbar-nav mr-auto">
      <li class="nav-item active">
-       <a class="nav-link" [routerLink]="['/services']">Services</a>
+       <a class="nav-link top-link" [routerLink]="['/services']">Services</a>
      </li>
      <li class="nav-item active">
-       <a class="nav-link" [routerLink]="['/deployments']">Deployments</a>
+       <a class="nav-link top-link" [routerLink]="['/deployments']">Deployments</a>
      </li>
    </ul>
 </nav>
