--- a/webapp/src/app/deployment-list/deployment-list.component.html
+++ b/webapp/src/app/deployment-list/deployment-list.component.html
@@ -2,12 +2,14 @@
   <div class="row">
     <div class="col-md-3">
       <h2>Services</h2>
-      <div class="form-check abc-checkbox" *ngFor="let service of services">
-        <input class="form-check-input" id="checkbox_{{service.S}}" type="checkbox" (click)="filter($event, service.S)">
-        <label class="form-check-label" for="checkbox_{{service.S}}">
-          {{service.S}}
-        </label>
-      </div>
+      @for (service of services; track service) {
+        <div class="form-check abc-checkbox">
+          <input class="form-check-input" id="checkbox_{{service.S}}" type="checkbox" (click)="filter($event, service.S)">
+          <label class="form-check-label" for="checkbox_{{service.S}}">
+            {{service.S}}
+          </label>
+        </div>
+      }
     </div>
     <div class="col-md-9">
       <h2>Deployments</h2>
@@ -21,15 +23,25 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let deployment of deployments">
-            <td>{{deployment.Date}}</td>
-            <td>{{deployment.ServiceName}}</td>
-            <td *ngIf="deployment.Status == 'success'"><span class="badge rounded-pill bg-success">{{deployment.Status}}</span></td>
-            <td *ngIf="deployment.Status == 'failed'"><span class="badge rounded-pill bg-danger">{{deployment.Status}}</span></td>
-            <td *ngIf="deployment.Status == 'aborted'"><span class="badge rounded-pill bg-info">{{deployment.Status}}</span></td>
-            <td *ngIf="deployment.Status == ''"></td>
-            <td>{{deployment.TaskDefinitionVersion}}</td>
-          </tr>
+          @for (deployment of deployments; track deployment) {
+            <tr>
+              <td>{{deployment.Date}}</td>
+              <td>{{deployment.ServiceName}}</td>
+              @if (deployment.Status == 'success') {
+                <td><span class="badge rounded-pill bg-success">{{deployment.Status}}</span></td>
+              }
+              @if (deployment.Status == 'failed') {
+                <td><span class="badge rounded-pill bg-danger">{{deployment.Status}}</span></td>
+              }
+              @if (deployment.Status == 'aborted') {
+                <td><span class="badge rounded-pill bg-info">{{deployment.Status}}</span></td>
+              }
+              @if (deployment.Status == '') {
+                <td></td>
+              }
+              <td>{{deployment.TaskDefinitionVersion}}</td>
+            </tr>
+          }
         </tbody>
       </table>
     </div>
