--- a/webapp/src/app/directives/alert.component.html
+++ b/webapp/src/app/directives/alert.component.html
@@ -1,1 +1,3 @@
-<div *ngIf="message" [ngClass]="{ 'alert': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }">{{message.text}}</div>
+@if (message) {
+  <div [ngClass]="{ 'alert': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }">{{message.text}}</div>
+}
